# get_molecule

./: README.md  pyproject.toml
get_molecule/: app.py  console.py  utils.py  xtb_optimize.py
