[tool.poetry]
name = "get-molecule"
version = "0.3.1"
description = ""
authors = ["mjhong0708 <mjhong0708@naver.com>"]
readme = "README.md"
packages = [{include = "get_molecule"}]

[tool.poetry.dependencies]
python = "^3.9"
ase = "^3.22.1"
click = "^8.1.3"
rdkit = "^2022.3.5"
PubChemPy = "^1.0.4"
rich = "^12.6.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.10.0"
flake8 = "^5.0.4"
jupyter = "^1.0.0"
notebook = "^6.5.1"
pytest = "^7.1.3"

[tool.poetry.scripts]
get-molecule = "get_molecule.app:app"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
